--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,12 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.4.0",
-        "yiisoft/yii2": ">=2.0.6",
+        "yiisoft/yii2": "2.0.8",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "yiisoft/yii2-jui": "^2.0",
-        "kartik-v/yii2-mpdf": "^1.0",
-        "kartik-v/bootstrap-fileinput": "^4.3",
-        "kartik-v/yii2-widget-fileinput": "^1.0"
+        "kartik-v/yii2-export": "@dev",
+        "kartik-v/yii2-grid": "@dev"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
