--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "yiisoft/yii2-jui": "^2.0",
         "kartik-v/yii2-export": "@dev",
         "kartik-v/yii2-grid": "@dev",
-        "kartik-v/yii2-mpdf": "*"
+        "kartik-v/yii2-mpdf": "*",
+        "kartik-v/yii2-widget-datepicker": "@dev",
+        "kartik-v/yii2-date-range": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
